--- a/templates/index.html
+++ b/templates/index.html
@@ -17,58 +17,7 @@
   </head>
 
   <body class="uk-height-1-1">
-    <div class="uk-vertical-align uk-text-center uk-height-1-1">
-      <div class="uk-vertical-align uk-text-center uk-height-1-1">
-        <div class="uk-background-primary uk-light uk-padding uk-panel">
-          <p class="uk-h4"><span>ToDo Manager Login</span></p>
-        </div>
-        
-        <form class="uk-padding" id="form">
-          <div class="uk-margin">
-            <div class="uk-inline">
-              <span class="uk-form-icon" uk-icon="icon: user"></span>
-							<input 
-								placeholder="Nombre de Usuario" 
-								class="uk-input" 
-								type="text" 
-								id="username"
-								name="username"
-							>
-            </div>
-          </div>
-					<div class="uk-margin">
-            <div class="uk-inline">
-              <span class="uk-form-icon uk-form-icon-flip" uk-icon="icon: lock"></span>
-							<input 
-								placeholder="Correo" 
-								class="uk-input" 
-								type="text" 
-								autofocus 
-								id="email"
-								name="email"
-							/>
-            </div>
-          </div>
-          <div class="uk-margin">
-            <div class="uk-inline">
-              <span class="uk-form-icon uk-form-icon-flip" uk-icon="icon: lock"></span>
-							<input 
-								placeholder="Contraseña" 
-								class="uk-input" 
-								type="password" 
-								autofocus 
-								name="password"
-							/>
-            </div>
-          </div>
-					<input 
-						type="submit" 
-						class="uk-button uk-button-secondary" 
-						value="Registrarse"
-					/> 
-        </form>
-      </div>
-    </div>
+    <h1>Estas en el index :D</h1>
 	</body>
 	<script>
 		document.getElementById('form').onsubmit = function(e) {
