--- a/templates/login.html
+++ b/templates/login.html
@@ -2,32 +2,40 @@
 <html lang="en-gb" dir="ltr">
 
   <head>
-  <title>
-    To dos Manager
-  </title>
-  <link rel="icon" type="image/png" href="img/test.png" >
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="styles.css" /> -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-  <!-- UIkit CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/css/uikit.min.css" />
+    <title>
+      To dos Manager
+    </title>
 
-	<!-- UIkit JS -->
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit-icons.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="/templates/img/test.png" />
+    <link rel="stylesheet" href="./styles.css" /> 
+    
+    <!-- Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+    
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/css/uikit.min.css" />
+
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit-icons.min.js"></script>
 
   </head>
 
   <body class="uk-height-1-1">
-		<div class="uk-vertical-align uk-text-center uk-height-1-1">
+    
+    <div class="uk-vertical-align uk-text-center uk-height-1-1">
 			<div class="uk-vertical-align uk-text-center uk-height-1-1">
-				<div class="uk-background-primary uk-light uk-padding uk-panel">
+        
+        <div class="uk-background-primary uk-light uk-padding uk-panel">
 					<p class="uk-h4"><span>To dos Manager</span></p>
 				</div>
-				<div class="uk-child-width-1-2@s uk-text-center" uk-grid>
+        
+        <div class="uk-child-width-1-2@s uk-text-center" uk-grid>
 					<div>
-						<div class="uk-background-muted uk-padding uk-panel">
+            
+            <div class="uk-background-muted uk-padding uk-panel">
 							<p class="uk-h4"><span>Login</span></p>
 						</div>
 						<form class="uk-padding" id="login">
@@ -35,20 +43,21 @@
 								<div class="uk-inline">
 									<span class="uk-form-icon" uk-icon="icon: user"></span>
 										<input 
-											id="username" 
-											name="username" 
+											id="username_login" 
+											name="username_login" 
 											placeholder="Nombre de Usuario" 
 											class="uk-input" 
 											type="text"
 										>
 								</div>
 							</div>
-							<div class="uk-margin">
+              
+              <div class="uk-margin">
 								<div class="uk-inline">
 									<span class="uk-form-icon uk-form-icon-flip" uk-icon="icon: lock"></span>
 										<input 
-											id="password" 
-											name="password" 
+											id="password_login" 
+											name="password_login" 
 											placeholder='Contraseña' 
 											class="uk-input" 
 											type="password" 
@@ -56,66 +65,76 @@
 										/>
 								</div>
 							</div> 
-							<div id="baduser" class="error uk-animation-shake">*Usuario inválido</div>
-							<div id="badpass" class="error uk-animation-shake">*Contraseña inválida</div>
+							<div id="baduser" class="hidden">*Usuario inválido</div>
+							<div id="badpass" class="hidden">*Contraseña inválida</div>
 							<input type="submit" class="uk-button uk-button-secondary" value="Ingresar"/> 
 						</form>
 					</div>
-					<div>
-					<div class="uk-background-secondary uk-light uk-padding uk-panel">
+          
+          <div>
+            <div class="uk-background-secondary uk-light uk-padding uk-panel">
 						<p class="uk-h4"><span>¿Aún no estás registrado?</span></p>
 					</div>
 
 					<form class="uk-padding" id="createuser">
 						<div class="uk-margin">
-							<div class="uk-inline">
+              
+              <div class="uk-inline">
 								<span class="uk-form-icon" uk-icon="icon: user"></span>
 									<input 
-										id="username" 
-										name="username"
+										id="username_reg" 
+										name="username_reg"
 										placeholder="Nombre de Usuario" 
 										class="uk-input" 
 										type="text"
 									/>
 							</div>
 						</div>
-						<div class="uk-margin">
+            
+            <div class="uk-margin">
 							<div class="uk-inline">
 								<span class="uk-form-icon uk-form-icon-flip" uk-icon="icon: mail"></span>
 									<input 
-										id="email"
+										id="email_reg"
 										placeholder="Correo" 
 										class="uk-input" 
-										autofocus 
-										name="email"
+                    autofocus 
+                    onkeyup="validEmail(this)"
+										name="email_reg"
 										type="text" 
 											/>
 							</div>
 						</div>
-						<div class="uk-margin">
+            
+            <div class="uk-margin">
 							<div class="uk-inline">
 								<span class="uk-form-icon uk-form-icon-flip" uk-icon="icon: lock"></span>
 									<input 
-										id="password" 
+										id="password_reg" 
 										name="placeholder"
 										placeholder='Contraseña' 
 										class="uk-input" 
-										type="password" 
+										type="password_reg" 
 										autofocus
 										>
 							</div>
 						</div> 
-						<div id="baduser" class="error uk-animation-shake">*Usuario inválido, vuelva a intenarlo</div>
-						<div id="sucesscreate" class="hidden uk-animation-scale-down">¡Se creó el usuario satisfactoriamente!</div>
+            <div id="baduser" class="hidden">*Usuario inválido, vuelva a intenarlo</div>
+            <div id="bademail" class="hidden">*Correo inválido</div>
+						<div id="sucesscreate" class="hidden">¡Se creó el usuario satisfactoriamente!</div>
 						<input type="submit" class="uk-button uk-button-secondary" value="Registrarse"/> 
 					</form>
-					</div>
+          
+        </div>
 				</div>
     	</div>
   	</div>
 	</body>
-<!-- <script src="login.js"> </script> -->
-<script>
+  <!-- <script src="login.js"> </script> -->
+</html>
+
+
+<!-- <script>
 	document.getElementById('createuser').onsubmit = function(e){
 		e.preventDefault();
 
@@ -140,5 +159,4 @@
 			document.getElementById('baduser').className = '';
 		});
 	}
-</script>
-</html>
+</script> -->
