--- a/templates/login.html
+++ b/templates/login.html
@@ -98,9 +98,9 @@
 										id="email_reg"
 										placeholder="Correo" 
 										class="uk-input" 
-                    autofocus 
-                    onkeyup="validEmail(this)"
-										name="email_reg"
+										autofocus 
+										onkeyup="validEmail(this)"
+										name="email"
 										type="text" 
 											/>
 							</div>
@@ -111,7 +111,7 @@
 								<span class="uk-form-icon uk-form-icon-flip" uk-icon="icon: lock"></span>
 									<input 
 										id="password_reg" 
-										name="placeholder"
+										name="password_reg"
 										placeholder='Contraseña' 
 										class="uk-input" 
 										type="password_reg" 
