name of input fixed

--- a/templates/login.html
+++ b/templates/login.html
@@ -72,7 +72,7 @@
 								<span class="uk-form-icon" uk-icon="icon: user"></span>
 									<input 
 										id="username_reg" 
-										name="username"_reg
+										name="username_reg"
 										placeholder="Nombre de Usuario" 
 										class="uk-input" 
 										type="text"
