--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en-gb" dir="ltr">
   <head>
     <title>
-      ToDo Manager
+      Application
     </title>
     <link rel="icon" type="image/png" href="img/test.png" >
     <meta charset="utf-8">
