--- a/templates/login.html
+++ b/templates/login.html
@@ -66,8 +66,8 @@
           />
         </div>
         </div> 
-        <div id="baduser_login" class="hidden">*Usuario inválido</div>
-        <div id="badpass_login" class="hidden">*Contraseña inválida</div>
+        <div id="baduser" class="hidden">*Usuario inválido</div>
+        <div id="badpass" class="hidden">*Contraseña inválida</div>
         <input type="submit" class="uk-button uk-button-secondary" value="Ingresar"/> 
       </form>
       </div>
@@ -118,8 +118,8 @@
           >
         </div>
       </div> 
-    <div id="baduser_register" class="hidden">*Alguno de los campos es invalido</div>
-    <div id="bademail_register" class="hidden">*Correo inválido</div>
+    <div id="baduser" class="hidden">*Usuario inválido, vuelva a intenarlo</div>
+    <div id="bademail" class="hidden">*Correo inválido</div>
       <div id="sucesscreate" class="hidden">¡Se creó el usuario satisfactoriamente!</div>
       <input type="submit" class="uk-button uk-button-secondary" value="Registrarse"/> 
       </form>
