--- a/templates/todos.html
+++ b/templates/todos.html
@@ -4,13 +4,13 @@
         <title>
             To dos Manager
             </title>
-            <!-- <link href="{{url_for('static', filename = 'css/styles.css')}}" rel="stylesheet"> -->
-            <!-- <link href="{{url_for('static', filename = 'img/test.png')}}" rel="icon" type="image/png"> -->
+            <link href="{{url_for('static', filename = 'css/styles.css')}}" rel="stylesheet"> 
+            <link href="{{url_for('static', filename = 'img/test.png')}}" rel="icon" type="image/png">
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1" />
             
-            <link href="css/styles.css" rel="stylesheet">
-            <link href="img/test.png" rel="icon" type="image/png">
+            
+            
             <!-- Fonts-->
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
             
