--- a/templates/todos.html
+++ b/templates/todos.html
@@ -9,8 +9,6 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1" />
             
-            
-            
             <!-- Fonts-->
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
             
@@ -28,23 +26,32 @@
                 <div class="uk-background-primary uk-light uk-padding uk-panel">
                     <p class="uk-h4"><span>Your To dos!</span></p>
                 </div>
-
-
+                    
                 <form class="ftodo" id="ftodo">
-                    <input type="text" id="description" name="description">
+                    <input type="text" id="description" name="description" placeholder="Task">
+                    <input type="text" id="category" name="category" placeholder="Categoría">
+                    <input type="date" id="end_date" name="end_date">
                     <input id ="add" type="submit" value="Add">
                 </form>
-                <button class="b" id="all">All</button>
-                <button class="b" id="incomplete">Incomplete</button>
-                <button class="b" id="complete">Complete</button>
                 <div class="error" id="error">That TODO already exists</div>
                 
-                <div class="uk-panel uk-panel-scrollable">
-                    <ul class="uk-list">
-                        <li><label><input class="uk-checkbox" type="checkbox" > this task</label></li>
-                    </ul>
+                <ul class="uk-subnav uk-subnav-pill" uk-switcher>
+                    <li><button id="all"><a href="#">All</a></button></li>
+                    <li><button id="incomplete"><a href="#">Activate</a></button></li>
+                    <li><button id="complete"><a href="#">Completed</a></button></li>
+                </ul>
                 
-                </div>
+                <ul class="uk-switcher uk-margin header">
+                    <div id="alltasks">
+                        <li>alls</li>
+                    </div>
+                    <div id="activatedtasks">
+                        <li>activateddds</li>
+                    </div>
+                    <div id="completedtasks">
+                        <li>completedddd</li>
+                    </div>
+                </ul>
                 <div class = 'todosli' id='todosli'></div>
                 
             </div>
