--- a/templates/todos.html
+++ b/templates/todos.html
@@ -28,7 +28,7 @@
         </div>
           
         <form class="ftodo" id="ftodo">
-          <input type="text" id="description" data-user_name="{{data}}" name="description" placeholder="Task">
+          <input type="text" id="description" data-id_user="{{data}}" name="description" placeholder="Task">
           <!-- <input type="text" id="category" name="category" placeholder="Categoría"> -->
 					<!-- <input type="date" id="end_date" name="end_date"> -->
           <input id ="add" type="submit" value="Add">
