--- a/templates/todos.html
+++ b/templates/todos.html
@@ -44,13 +44,13 @@
         
         <ul class="uk-switcher uk-margin header">
           <div id="alltasks">
-            <li>alls</li>
+            <li></li>
           </div>
-          <div id="activatedtasks">
-            <li>activateddds</li>
+          <div id="incompletedtasks">
+            <li></li>
           </div>
           <div id="completedtasks">
-            <li>completedddd</li>
+            <li></li>
           </div>
         </ul>
         <div class = 'todosli' id='todosli'></div>
