--- a/templates/todos.html
+++ b/templates/todos.html
@@ -17,7 +17,8 @@
     
       <!-- UIkit JS -->
       <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit-icons.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.8/dist/js/uikit-icons.min.js"></script>
+			<script src="https://kit.fontawesome.com/e92fa48c98.js" crossorigin="anonymous"></script>
     
   </head>
   <body class="uk-height-1-1">
